--- a/src/app/website/landing/landing.component.html
+++ b/src/app/website/landing/landing.component.html
@@ -45,7 +45,7 @@
 
 
     
-<!--------------------------------------------------- start best sals  ------------------>
+<!--==================================== start best sals ====================================-->
     <section class='the_best'>
         <div class="container">
             <div class="title text-center">
@@ -94,78 +94,17 @@
             </div>
         </div>
     </section>
-    <!----------------------------------------------------- end best sals  ------------------->
-
-
-
-
-
- <!--------------------------------------- start appoinment     ------------------------>
-    <section class='appoinment'>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg">
-                    <div class="info">
-                        <div class="main_title text-center">
-                            <div class="cont_img">
-                                <img src="../../../assets/img/about/flowers.gif" alt="">
-                            </div>
-                            <h2> Appointment </h2>
-                        </div>
-                        <div class="description">
-                            <h2> want to make a booking or have a qusetion? </h2>
-                            <p class='lead'> Call me: <span>002-6666-8888</span> or fill out our online booking  equiry form and well contact you </p>
-                        </div>
-                        <div class="cont_button"> <button> make an appoinment </button> </div>
-                    </div>
-                </div>
-                <div class="col-lg girl">
-                    <div class="main_cont">
-                        <div class="cont_img"> 
-                            <img src="../../../assets/img/appointment/1.png" alt="">
-                            <div class="inside_border"></div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-<!--------------------------------------- end appoinment    ------------------------>
-   
-
-
-<!--------------------------------------------------- start classic modern  ----------->
-    <section class='classic'>
-        <div class="container">
-            <div class="row">
-                <div class="col-md">
-                    <div class="info">
-                        <div class="title">
-                            <h2> Classy & Modern </h2>
-                            <p> Etiam rhoncus. Maecenas tempus, tellus eget dolor condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <button> submite </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="cont_img">
-                        <img src="../../../assets/img/classic/h11-img-1.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-<!--------------------------------------------------- end classic modern  ----------->
+<!--==================================== end best sals ====================================-->
 
 
 
 
 
 
-<!--------------------------------------------------- start best sals  ------------------>
 
-<!----------------------------------------------------- start customer  ------------------->
+
+
+<!--==================================== start customer ====================================-->
     <section class="customer">
         <div class="container">
            <div class="title">
